# maildrop

./: .env.example  .env.maildrop.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  LICENSE  MAILDROP_MAIN.md  README.md  alembic.ini  docker-compose.maildrop.yml  docker-compose.yml  pyproject.toml
deploy/caddy/: Caddyfile.maildrop
deploy/postfix/: mail-api-ingest  main.cf.maildrop  master.cf.maildrop  virtual_mailbox_domains_regexp  virtual_mailbox_regexp
docs/: deploy-for-ai.md  deploy-for-humans.md  deploy-from-scratch.md  maildrop-ops.md  spaceship-dns.md
docs/superpowers/plans/: 2026-06-12-lightweight-mail-api.md  2026-06-12-maildrop-alias-categories-delete.md  2026-06-12-maildrop-export-links.md  2026-06-12-xxxmailmanage-inbox-manager.md
docs/superpowers/specs/: 2026-06-12-emailengine-admin-zh-design.md  (+3 more)
migrations/: env.py
migrations/versions/: 20260612_0001_add_alias_export_delete_timestamps.py  20260612_0002_create_managed_inboxes.py  20260614_0003_create_registered_subdomains.py
scripts/: maildrop-production-check.sh  maildrop-public-smoke.py
src/maildrop/: app.py  cli.py  cloudflare.py  config.py  db.py  mailparse.py  manager.py  models.py  repository.py  schemas.py  security.py  spaceship.py
tests/: admin-zh.test.js
tests/maildrop/: conftest.py  test_admin.py  test_api.py  test_cli.py  test_cloudflare.py  test_config.py  test_mailparse.py  test_manager.py  test_migrations.py  test_models.py  test_production_check_script.py  test_public_smoke_script.py  test_repository.py  test_spaceship.py  test_xxxmailmanage.py
(+10 files in other folders)
