[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maildrop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.17.2",
  "beautifulsoup4==4.14.2",
  "fastapi==0.124.0",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "psycopg[binary]==3.3.2",
  "pydantic-settings==2.12.0",
  "python-multipart==0.0.20",
  "sqlalchemy==2.0.45",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maildrop = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
